crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__union_simple.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: type Bool = True | False
---
Union(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 25,
            },
        },
        value: Union {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 6,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: "Bool",
            },
            arguments: [],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 13,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: "True",
                    },
                    arguments: [],
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 20,
                            },
                            end: Position {
                                line: 1,
                                column: 25,
                            },
                        },
                        value: "False",
                    },
                    arguments: [],
                },
            ],
        },
    },
)
