crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__union__tests__union_with_doc_comment.snap
---
source: crates/nash-parse/src/declaration/union.rs
description: "{-| Represents optional values -}\ntype Maybe a = Just a | Nothing\n"
---
Union(
    Some(
        Comment(
            Snippet {
                data: [
                    32,
                    82,
                    101,
                    112,
                    114,
                    101,
                    115,
                    101,
                    110,
                    116,
                    115,
                    32,
                    111,
                    112,
                    116,
                    105,
                    111,
                    110,
                    97,
                    108,
                    32,
                    118,
                    97,
                    108,
                    117,
                    101,
                    115,
                    32,
                ],
                off_row: 1,
                off_col: 4,
            },
        ),
    ),
    Located {
        region: Region {
            start: Position {
                line: 2,
                column: 1,
            },
            end: Position {
                line: 3,
                column: 1,
            },
        },
        value: Union {
            name: Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 6,
                    },
                    end: Position {
                        line: 2,
                        column: 11,
                    },
                },
                value: "Maybe",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 12,
                        },
                        end: Position {
                            line: 2,
                            column: 13,
                        },
                    },
                    value: "a",
                },
            ],
            ctors: [
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 16,
                            },
                            end: Position {
                                line: 2,
                                column: 20,
                            },
                        },
                        value: "Just",
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 21,
                                },
                                end: Position {
                                    line: 2,
                                    column: 22,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Ctor {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 25,
                            },
                            end: Position {
                                line: 2,
                                column: 32,
                            },
                        },
                        value: "Nothing",
                    },
                    arguments: [],
                },
            ],
        },
    },
)
